--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/193378-452816261433631-1389610346-o-122x58.jpg" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="Welcome to Piloni's Italian Restaurant located at 1733 Lafayette Ave in Terre Haute, Indiana 47804. We invite you to visit our family ran restaurant for Lunch and Dinner Service. ">
   
-  <title>Home</title>
+  <title>Piloni's Italian Restaurant</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
@@ -59,9 +59,9 @@
                         <a class="nav-link link text-black display-4" href="#">
                             HOME</a>
                     </li>
-                    <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">
+                    <li class="nav-item"><a class="nav-link link text-black display-4" href="#" aria-expanded="true">
                             MENU</a>
-                        <div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="#" aria-expanded="false">Sushi</a><a class="dropdown-item text-black display-4" href="#" aria-expanded="false">Pizza</a><a class="dropdown-item text-black display-4" href="#" aria-expanded="false">Thai Food</a></div>
+                        
                     </li>
                     <li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">ABOUT US</a>
                     </li>
@@ -69,7 +69,8 @@
 
                     <li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">JOIN OUR TEAM</a></li></ul>
 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="page3.html">PLACE YOUR ORDER</a></div>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="#">
+                        ONLINE ORDER</a></div>
                 
             </div>
         </div>
@@ -138,7 +139,7 @@
 
             <div class="col-md-12 col-lg-6 mx-auto mbr-form" data-form-type="formoid">
                 <!--Formbuilder Form-->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="+oMlnYTgkEjJOvxQvqYmFsEM3r5EYO1SDvJ/qQ5R2a7/zK9uYe1jI3F7AQGMYekdHsQDq/P+rEJnin4m8dK3ILt0tbeb/+ULAUT+Uh+ohGlBFYu6TI+x54Zq/Lum7D0=.f7Qi8ll+lmoRd+PfHo8p3BEePxT7lR9y+idQ4aI4bA7EeDhRncygkmtclOAzvSyvLXt5VyKpbNw0FXQK/w9w9u19rNXkCRbBk7oi7mawvN/umfZPAMt3Ac3aMY6DMBR6">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ciAIWeXRNyQyzjFW5t6/wg1V9vFqsS0DnhtWDs23et+GHV3327LIqyBMJrTJRZ//Eayun6uSMgsv3PjqnwAul+g7X7TMRLlAR6nyiXsmM4dnWwHIuyR3jRZSmOI1HORO.imGbcy9bpMNYO/hk4YjQczWIZPON5OcQ8NoI3Mebn02JzichYHG2XQXPeLuHQ+DuJUGQZBqAb/JQxBQUMwDbbpZN5B0I7NuJTewoDelQ8sRhYhzs4pGLMhVehJYN4Upo">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks For Reaching Out! Your message has been received and we will be sure to response as soon as possible! Of course we always welcome you to visit our restaurant!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
