--- a/about-us.html
+++ b/about-us.html
@@ -52,21 +52,20 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                        <a class="nav-link link text-black display-4" href="#">
+                        <a class="nav-link link text-black display-4" href="index.html">
                             HOME</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link link text-black display-4" href="#" aria-expanded="true">
+                    <li class="nav-item"><a class="nav-link link text-black display-4" href="online-ordering.html" aria-expanded="false">
                             MENU</a>
                         
                     </li>
-                    <li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">ABOUT US</a>
+                    <li class="nav-item"><a class="nav-link link text-black display-4" href="about-us.html">ABOUT US</a>
                     </li>
 
 
-                    <li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">JOIN OUR TEAM</a></li></ul>
+                    <li class="nav-item"><a class="nav-link link text-black display-4" href="join-our-team.html">JOIN OUR TEAM</a></li></ul>
 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="#">
-                        ONLINE ORDER</a></div>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="page3.html">PLACE YOUR ORDER</a></div>
                 
             </div>
         </div>
