--- a/index.html
+++ b/index.html
@@ -56,21 +56,20 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                        <a class="nav-link link text-black display-4" href="#">
+                        <a class="nav-link link text-black display-4" href="index.html">
                             HOME</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link link text-black display-4" href="#" aria-expanded="true">
+                    <li class="nav-item"><a class="nav-link link text-black display-4" href="online-ordering.html" aria-expanded="false">
                             MENU</a>
                         
                     </li>
-                    <li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">ABOUT US</a>
+                    <li class="nav-item"><a class="nav-link link text-black display-4" href="about-us.html">ABOUT US</a>
                     </li>
 
 
-                    <li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">JOIN OUR TEAM</a></li></ul>
+                    <li class="nav-item"><a class="nav-link link text-black display-4" href="join-our-team.html">JOIN OUR TEAM</a></li></ul>
 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="#">
-                        ONLINE ORDER</a></div>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="page3.html">PLACE YOUR ORDER</a></div>
                 
             </div>
         </div>
@@ -139,7 +138,7 @@
 
             <div class="col-md-12 col-lg-6 mx-auto mbr-form" data-form-type="formoid">
                 <!--Formbuilder Form-->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="jw1tB1b0wFWAV4MalZJh2NjxqbHtMxi3Gei+JhLghvdAOHFJzp375HMyJ3TszbWMr1GrlWaMprZ2snQf+AuIfUfMCWDYia05uyfP37vSalB5W1gZ4ggCM9niILUo3zsp.UTRkt+6xGeBo/E5PjjzD6imD0s2GygRVhc+d0fr6ctKfyHhzkDuV96e1XFpjv0fUMBehNfD8uJDAOy6DqbXlyO0ZYUmqw3x/fpEHyHJJnnCF31KdTMCtIlJiDJ0y+dIW">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="tuOH74l5djVteH8rMls5WAU2J8LpBc0YqSUbRK3fn7drcZzWIQB0InMgKZin0oKQrAo4Qc4swHeHsa6l1OBuUmXlMPqArBv2RUiNY5qU05svGRhH4ZY+BYzhwYSFwF6O.xpIZOk32/TIT9z1QK4ywK+HyVcup3hcu1mTE/HvsUD191VRtuv5xe2borbDeKJCGz4q6MOMdnfDnhG/Sv3VBLdloYcnskexxdljejD1kCI9wQf9mDG4lTCwxY8P3yUk=">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks For Reaching Out! Your message has been received and we will be sure to response as soon as possible! Of course we always welcome you to visit our restaurant!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
