--- a/join-our-team.html
+++ b/join-our-team.html
@@ -55,21 +55,20 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                        <a class="nav-link link text-black display-4" href="#">
+                        <a class="nav-link link text-black display-4" href="index.html">
                             HOME</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link link text-black display-4" href="#" aria-expanded="true">
+                    <li class="nav-item"><a class="nav-link link text-black display-4" href="online-ordering.html" aria-expanded="false">
                             MENU</a>
                         
                     </li>
-                    <li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">ABOUT US</a>
+                    <li class="nav-item"><a class="nav-link link text-black display-4" href="about-us.html">ABOUT US</a>
                     </li>
 
 
-                    <li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">JOIN OUR TEAM</a></li></ul>
+                    <li class="nav-item"><a class="nav-link link text-black display-4" href="join-our-team.html">JOIN OUR TEAM</a></li></ul>
 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="#">
-                        ONLINE ORDER</a></div>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="page3.html">PLACE YOUR ORDER</a></div>
                 
             </div>
         </div>
@@ -219,7 +218,7 @@
 
             <div class="col-lg-8 my-auto md-pb mbr-form" data-form-type="formoid">
                 <!--Formbuilder Form-->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="cRubhHMekeF4jZdZk33BC4thicINvFWYNxvQICwAH7zRanY5VVi333AfG1InsiHFIWmtZLGnwOrb7SrXovVyh7GnIt0Mj1zu01KVr3CKeyoI2/FwB+EBsa/YPynxSJ3K.cM+TkMyQLrStSbo9ml9o+FmnrD6gFDszp5p37KjIYMk6ev4YHitfbwwVMgRsJ9DMziszDv5G+UGG6aUEq52wRXuPfrHjIbaZ1A0y92zSyUL9X2xEfmAwDuTBE2pX6CU8">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="zEcXs3w1IpCctjkm79TBRPKH4wS+9m74iukb4rbAqGIliIVrcN5hB95Y2WDGOy9I0fs/fzVP90+pcRsEiteTCUxOTxmQWaRSpaF+g2Y2f3unxy3lJYjK9+F74fwqI7sS.diYCvOXyGIeGQNHzOJ1Fh2IWd5gh0PK3WnsFuQSANh04uUKuXG5jchQUXFJASoqZi4VcG96faL4SRVIZxI5tSU3m19KqBnjX0BeO0RSSOwO55i+r5ZsUaQ5j8bZ8GMo0">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out
                             the form!</div>
