--- a/join-our-team.html
+++ b/join-our-team.html
@@ -218,7 +218,7 @@
 
             <div class="col-lg-8 my-auto md-pb mbr-form" data-form-type="formoid">
                 <!--Formbuilder Form-->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="zEcXs3w1IpCctjkm79TBRPKH4wS+9m74iukb4rbAqGIliIVrcN5hB95Y2WDGOy9I0fs/fzVP90+pcRsEiteTCUxOTxmQWaRSpaF+g2Y2f3unxy3lJYjK9+F74fwqI7sS.diYCvOXyGIeGQNHzOJ1Fh2IWd5gh0PK3WnsFuQSANh04uUKuXG5jchQUXFJASoqZi4VcG96faL4SRVIZxI5tSU3m19KqBnjX0BeO0RSSOwO55i+r5ZsUaQ5j8bZ8GMo0">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="kXAZ50Gf/BT3vhA7p0Robbiy6DqdlAeXTng52viiDZY5k/4p+FL95bYt1r5r1wd+koMV7XoIiYQTR9EnrEAW9BI/dx9p0YTE3/y+MQogLTQD3ar8Vj3bBMYrsrOcBA1o.teFu3bOxVtKb74oEdlrtQ/QsyqZOySg7jz0UccJYz7Eq6/JEkf+Mm9FSBdG8v8eAlahPw2TAJLjriitxrw9DbiwmlGT5dFVnL6RSnxFO4plVGn8vEbONx3sfSrGp7Lyb">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out
                             the form!</div>
@@ -288,11 +288,8 @@
             <div class="col-md-6 col-lg-3 align-center">
                 <div class="item-content">
                     <h3 class="mbr-section-title pb-2 mbr-bold mbr-fonts-style display-7">Book a table</h3>
-                    <p class="mbr-text mbr-fonts-style display-4">Dogfood och Sliders
-                        foodtruck.
-                        <br>Under Om oss kan ni läsa
-                    </p>
-                    <h4 class="phone mbr-bold pb-5 mbr-fonts-style display-7">(812) 466-4744</h4>
+                    <p class="mbr-text mbr-fonts-style display-4">Call<br>(812) 466-4744</p>
+                    
 
                 </div>
 
