--- a/about-us.html
+++ b/about-us.html
@@ -151,11 +151,8 @@
             <div class="col-md-6 col-lg-3 align-center">
                 <div class="item-content">
                     <h3 class="mbr-section-title pb-2 mbr-bold mbr-fonts-style display-7">Book a table</h3>
-                    <p class="mbr-text mbr-fonts-style display-4">Dogfood och Sliders
-                        foodtruck.
-                        <br>Under Om oss kan ni läsa
-                    </p>
-                    <h4 class="phone mbr-bold pb-5 mbr-fonts-style display-7">(812) 466-4744</h4>
+                    <p class="mbr-text mbr-fonts-style display-4">Call<br>(812) 466-4744</p>
+                    
 
                 </div>
 
